--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <!-- Vista de Login -->
         <div id="loginView" class="view">
             <div class="login-container">
-                <h1>Notitas de Luna</h1>
-                <p>Comparte tus sentimientos de una manera especial</p>
+                <h1>Notitas para mi Luna</h1>
+                <p>Porque a veces mis escritos llevan apellido.</p>
                 <button id="googleLogin" class="login-btn">
                     <i class="fab fa-google"></i> Iniciar sesión con Google
                 </button>
@@ -29,6 +29,11 @@
         <div id="notesView" class="view hidden">
             <div class="header">
                 <h1>Para mí Luna</h1>
+                <p>
+                    Aquí encontrarás los escritos que, sin pensarlo, me llevan a ti.
+                    Son tan tuyos, que he querido dejarlos aquí, <br>
+                    como quien guarda pedacitos de alguien en un rincón sagrado.
+                </p>
                 <button id="logoutBtn" class="logout-btn">
                     <i class="fas fa-sign-out-alt"></i> Cerrar sesión
                 </button>
@@ -38,6 +43,7 @@
                 <div id="notesList" class="notes-list">
                     <!-- Las notas se agregarán dinámicamente aquí -->
                 </div>
+
                 
                 <div id="addNoteForm" class="add-note-form">
                     <textarea id="noteContent" placeholder="Escribe tu nota de amor aquí..."></textarea>
